k8s/services/inventory-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-api
  namespace: boxco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-api
  template:
    metadata:
      labels:
        app: inventory-api
    spec:
      containers:
      - name: inventory-api
        image: 192.168.49.2:30500/inventory-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-api
  namespace: boxco
  labels:
    app: inventory-api
spec:
  type: NodePort
  ports:
  - name: http
    port: 3003
    targetPort: 3003
    nodePort: 30003
  selector:
    app: inventory-api
