k8s/services/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: boxco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: 192.168.49.2:30500/notification-service:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: boxco
  labels:
    app: notification-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: notification-service
