k8s/services/sales-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-api
  namespace: boxco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales-api
  template:
    metadata:
      labels:
        app: sales-api
    spec:
      containers:
      - name: sales-api
        image: 192.168.49.2:30500/sales-api:main-915b39d
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: sales-api
  namespace: boxco
  labels:
    app: sales-api
spec:
  type: NodePort
  ports:
  - name: http
    port: 3001
    targetPort: 3001
    nodePort: 30001
  selector:
    app: sales-api
