k8s/services/shipment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipment-api
  namespace: boxco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipment-api
  template:
    metadata:
      labels:
        app: shipment-api
    spec:
      containers:
      - name: shipment-api
        image: 192.168.49.2:30500/shipment-api:main-a395e45
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: shipment-api
  namespace: boxco
  labels:
    app: shipment-api
spec:
  type: NodePort
  ports:
  - name: http
    port: 3002
    targetPort: 3002
    nodePort: 30002
  selector:
    app: shipment-api
